fixed carousel z-index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -526,8 +526,7 @@ label {
 .carousel {
     position: absolute;
     top: 145px;
-    left: 142px;
-    
+    left: 142px;  
 }
 
 .mid-section {
@@ -549,6 +548,14 @@ label {
 .left-right-padding {
     padding-left: 34px;
     padding-right: 34px;
+}
+
+#googlemapdir {
+    z-index: 99;
+}
+
+.leftsection{
+    z-index: 99;
 }
 
 
